# mksubrip

./: .gitignore  .pre-commit-config.yaml  Cargo.toml  LICENSE  README.md  justfile  requirements.txt  run.sh
examples/: request.rs  serde_json.rs  signal_and_slot.rs  subrip_block.rs  test_ai_module.rs
src/: app.rs  lib.rs  main.py  main.rs  prelude.rs  subrip.rs  utils.py  utils.rs
src/ai/: mod.rs
src/app/: mod.rs
src/core/: media_player.rs  mod.rs  request.rs  shared.rs  signal.rs  slot.rs
src/io/: mod.rs  srt_writer.rs
src/translator/: __init__.py  openai_whisper.py  web.py
src/ui/: control_bar.rs  edit_subrip_window.rs  mainwindow.rs  menu_bar.rs  menus.rs  mod.rs  moniter.rs  monitor.rs  new_subrip_window.rs  state.rs  subrip_list_item.rs  subrip_list_widget.rs  view.rs
src/ui/timeline/: mod.rs  subrip_block.rs
src/writer/: mod.rs
