[package]
name = "mksubrip"
version = "0.1.0"
edition = "2021"
author = "zaiic(George Cai)<zaiic@outlook.com>"

[dependencies]
anyhow = "1.0.72"
eframe = "0.22.0"
log = "0.4.19"
egui-video = { git = "https://github.com/n00kii/egui-video.git", rev = "2277be8"}
rfd = "0.11.4"
chrono = "0.4.26"
sdl2 = { version = "0.35.2", features = ["bundled"] }
