[package]
name = "mksubrip"
version = "0.1.0"
edition = "2021"
author = "George Cai <georgecai0908@outlook.com>"

[dependencies]
anyhow = "1.0.80"
chrono = "0.4.35"
eframe = "0.27"
egui_dnd = "0.8.0"
env_logger = "0.11.3"
log = "0.4.21"
rfd = "0.14.0"
nom = "7.1.3"
sdl2 = "0.35.2"
timer = "0.2.0"
ringbuf = "0.3.3"
parking_lot = "0.12.1"
itertools = "0.11.0"
ffmpeg-the-third = "1.2.2"
atomic = "0.5.3"
catppuccin-egui = { version = "5.1.1", default-features = false, features = ["egui27"] }
dirs = "5.0"
reqwest = { version = "0.12", features = ["blocking", "multipart", "json"] }
serde_json = "1.0.117"
